# models/Group.js
@@ -4,6 +4,7 @@ const Schema = mongoose.Schema;
 const GroupSchema = new mongoose.Schema({
     name: String,
     owner: { type: Schema.Types.ObjectId, ref: 'User' },
+    bills: [{ type: Schema.Types.ObjectId, ref: 'Bill' }],
     members: [{ type: Schema.Types.ObjectId, ref: 'User' }]
   }, {timestamps: true});
 
@@ -14,5 +15,14 @@ GroupSchema.methods.attachMember = function(user) {
     this.members.push(user._id);
   }
 };
+
+GroupSchema.methods.attachBill = function(bill) {
+    this.bills.push(bill._id);
+
+    this.save().catch((err) => {
+        throw new Error("Couldn't attach bill")
+    });
+};
+
 
 mongoose.model('Group', GroupSchema);
